Corrected working hamburger and menu on mobile

--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -63,11 +63,12 @@
     }
     @at-root &__item {
         padding: .5rem 0;
+        border-top: 3px solid transparent;
         @at-root &:last-child {
             padding-bottom: 0;
         }
         @at-root &--active {
-            padding-bottom: .8rem; 
+            // padding-bottom: .8rem; 
             border-top: 3px solid #ff6033;
         }
     }
@@ -152,7 +153,8 @@
             margin-bottom: 0;
             margin-right: 1rem;
             padding: .7rem 0;
-            align-self: center;  
+            align-self: center;
+            border-top: none;  
             @at-root &:last-child {
                 margin-right: 0;
                 padding-bottom: .7rem;
